# hyperspeed-nostalgia

./: .gitignore  BYZANTINE_ART_GUIDE.md  CAVE_PAINTINGS_GUIDE.md  CLAUDE.md  EARLY_RENAISSANCE_GUIDE.md  EGYPTIAN_ART_GUIDE.md  FAUVISM_GUIDE.md  HIGH_RENAISSANCE_GUIDE.md  HYPERSPEED_NOSTALGIA_Project_Document_v1.2.md  HYPERSPEED_NOSTALGIA_Project_Document_v1.3.md  HYPERSPEED_NOSTALGIA_Project_Document_v1.4.md  IMPRESSIONISM_GUIDE.md  INTERNATIONAL_GOTHIC_GUIDE.md  NEOCLASSICISM_GUIDE.md  PRINCIPLES.md  jack_wrenley_character_sheet.html  postimpressionism_bathers.json  postimpressionism_cathedral_kaleidoscope.json  postimpressionism_combined_batch_3.json  postimpressionism_conflict_batch.json  postimpressionism_pattern_escape.json  postimpressionism_pattern_escape2.json  postimpressionism_vangogh_aggressive.json  postimpressionism_vangogh_tension2.json  pyproject.toml  semantic_merging_batch.json  triptych_sculpture_batch.json
.claude/plans/: zany-whistling-duckling.md
examples/cubism/: cubism_batch_1.json  cubism_batch_1b.json  cubism_batch_2.json  cubism_batch_2b.json
examples/fauvism/: fauvism_batch_1.json  fauvism_batch_2.json  fauvism_batch_3.json  fauvism_batch_4.json  fauvism_batch_5.json  fauvism_color_violations.json  fauvism_flat_color.json  fauvism_forced_color.json  fauvism_landscapes_failures.json  fauvism_pattern_form_conflict.json
examples/high_renaissance/: deposition_sculpture_batch.json  epic_stilllife_batch.json  semantic_merging_batch.json  triptych_salvation_batch.json
examples/neoclassicism/: neoclassicism_batch.json
examples/post_impressionism/: postimpressionism_combined_batch.json  postimpressionism_combined_batch_2.json  postimpressionism_conflict_batch_2.json  (+15 more)
scripts/: download_models.py
src/hyperspeed/: __init__.py  (+2 more)
(+22 files in other folders)
